--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,16 @@ allprojects {
         jcenter()
     }
 }
+ext{
+    ANDROID_BUILD_MIN_SDK_VERSION=10
+    ANDROID_BUILD_TARGET_SDK_VERSION=22
+    ANDROID_BUILD_TOOLS_VERSION='22.0.0'
+    ANDROID_BUILD_SDK_VERSION=22
 
+    SUPPORT_VERSION='22.2.1'
+
+    MAVEN_VERSION='1.1.3'
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
