--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-
-version = 3.0
-
+version = 6.1
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion project.ANDROID_BUILD_SDK_VERSION
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 22
-        versionCode 2
-        versionName "2.0"
+        minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION
+        targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION
+        versionCode 4
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -21,12 +19,9 @@ android {
         }
     }
 }
-
 def siteUrl = 'https://github.com/qq2748/HAAndroidLib'
 def gitUrl = 'git@github.com:qq2748/HAAndroidLib.git'
-group = "ha.custom.webview.lib"
-
-
+group = "haha.binbin"
 install {
     repositories.mavenInstaller {
         pom {
@@ -62,23 +57,18 @@ install {
         }
     }
 }
-
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier = 'sources'
 }
-
-
 artifacts {
     archives sourcesJar
 }
-
 Properties properties = new Properties()
 File f = new File("local.properties")
-if(f.exists()) {
+if (f.exists()) {
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
 }
-
 bintray {
     user = properties.getProperty("bintray.user")
     key = properties.getProperty("bintray.apikey")
@@ -93,15 +83,16 @@ bintray {
         version {
             gpg {
                 sign = true //Determines whether to GPG sign the files. The default is false
-                passphrase = properties.getProperty("bintray.gpg.password") //Optional. The passphrase for GPG signing'
+                passphrase = properties.getProperty("bintray.gpg.password")
+                //Optional. The passphrase for GPG signing'
             }
         }
     }
 
     dependencies {
         compile fileTree(include: ['*.jar'], dir: 'libs')
+        compile 'com.android.support:appcompat-v7:'+project.SUPPORT_VERSION
         testCompile 'junit:junit:4.12'
-        compile 'com.android.support:appcompat-v7:23.1.1'
         compile 'com.jakewharton:butterknife:5.1.1'
     }
 }
