--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
     }
 }
 
@@ -18,11 +20,11 @@ allprojects {
 }
 ext{
     ANDROID_BUILD_MIN_SDK_VERSION=10
-    ANDROID_BUILD_TARGET_SDK_VERSION=22
-    ANDROID_BUILD_TOOLS_VERSION='22.0.0'
-    ANDROID_BUILD_SDK_VERSION=22
+    ANDROID_BUILD_TARGET_SDK_VERSION=23
+    ANDROID_BUILD_TOOLS_VERSION='23.0.0'
+    ANDROID_BUILD_SDK_VERSION=23
 
-    SUPPORT_VERSION='22.2.1'
+    SUPPORT_VERSION='23.0.0'
 
     MAVEN_VERSION='1.1.3'
 }
