--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.jakewharton.butterknife'
 version = 6.4
 android {
     compileSdkVersion project.ANDROID_BUILD_SDK_VERSION
@@ -93,6 +94,7 @@ bintray {
         compile fileTree(include: ['*.jar'], dir: 'libs')
         compile 'com.android.support:appcompat-v7:'+project.SUPPORT_VERSION
         testCompile 'junit:junit:4.12'
-        compile 'com.jakewharton:butterknife:5.1.1'
+        compile 'com.jakewharton:butterknife:8.4.0'
+        annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     }
 }
